--- a/.gitignore
+++ b/.gitignore
@@ -88,3 +88,8 @@ fabric.properties
 hs_err_pid*
 
 # End of https://www.gitignore.io/api/java,intellij
+.gradle/
+.idea/compiler.xml
+.idea/modules/WebDataFetcher_main.iml
+.idea/modules/WebDataFetcher_test.iml
+.idea/vcs.xml
