FIX: proper packaging

--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 group 'com.diogonunes'
-version '1.0-SNAPSHOT'
+version '1.0'
 
 apply plugin: 'java'
 
@@ -7,6 +7,12 @@ sourceCompatibility = 1.8
 
 repositories {
     mavenCentral()
+}
+
+jar {
+    manifest {
+        attributes 'Main-Class': 'com.diogonunes.Fetcher'
+    }
 }
 
 dependencies {
