--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@ group 'com.diogonunes'
 version '1.0'
 
 apply plugin: 'java'
+apply plugin: 'gradle-one-jar'
 
 sourceCompatibility = 1.8
 
@@ -9,13 +10,25 @@ repositories {
     mavenCentral()
 }
 
-jar {
-    manifest {
-        attributes 'Main-Class': 'com.diogonunes.Fetcher'
+buildscript {
+    repositories {
+        mavenCentral()
     }
+    dependencies {
+        classpath 'com.github.rholder:gradle-one-jar:1.0.4'
+    }
+}
+
+task exportFatJar(type: OneJar) {
+    mainClass = 'com.diogonunes.Fetcher'
+    archiveName = 'fetcher.jar'
 }
 
 dependencies {
     compile group: 'com.google.code.gson', name: 'gson', version: '2.8.1'
     compile group: 'org.seleniumhq.selenium', name: 'selenium-java', version: '3.4.0'
+}
+
+artifacts {
+    archives exportFatJar
 }
